--- a/cppv.html
+++ b/cppv.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VisionaryPulse LLP | Privacy Policy</title>
+    <title>VisionaryPulse LLP | CPPV</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -48,134 +48,113 @@
     <header class="policy-header-bg">
         <div class="policy-header-card">
             <nav class="breadcrumb">
-                <a href="index.html">Home</a> <span>&gt;</span> <a href="#" class="active">Privacy Policy</a>
+                <a href="index.html">Home</a> <span>&gt;</span> <a href="#" class="active">CPPV</a>
             </nav>
-            <h1>Privacy Policy</h1>
-            <p><strong>Effective Date:</strong> February 2026</p>
-            <p><strong>(Aligned with Indian IT Act, 2000 & DPDP Act 2023 Principles)</strong></p>
-            <p>VisionaryPulse LLP is committed to lawful, transparent, and secure processing of personal data.</p>
+            <h1 style="font-size: 40px;">Corporate Premium Positioning Version</h1>
+            <p><strong>(For High-Value Clients, Investors & Institutions)</strong></p>
+            <p>This version is designed for a more elite, strategic positioning tone.</p>
         </div>
     </header>
 
     <main class="policy-container">
-        <div class="policy-grid">
-            <div class="policy-col">
-                <section>
-                    <h3>1. Legal Basis of Processing</h3>
-                    <p>We process personal data under:
-                    <ul style="margin-left: 20px;">
-                        <li>Consent</li>
-                        <li>Legitimate business interests</li>
-                        <li>Legal compliance obligations</li>
-                        <li>Contractual necessity</li>
-                    </ul>
-                    </p>
-                </section>
+        <div class="section-container">
 
-                <section>
-                    <h3>2. Data We Collect</h3>
-                    <p>We may collect:
-                    <ol style="margin-left: 20px; list-style: upper-alpha; font-weight: 600;">
-                        <li>Personal Information
-                            <ul style="margin-left: 20px; font-weight: 500; list-style: disc;">
-                                <li>Name</li>
-                                <li>Email address</li>
-                                <li>Phone number</li>
-                                <li>Company details</li>
-                                <li>Professional designation</li>
-                            </ul>
-                        </li>
-                        <li>Technical Data
-                            <ul style="margin-left: 20px; font-weight: 500; list-style: disc;">
-                                <li>IP address</li>
-                                <li>Browser type</li>
-                                <li>Device identifiers</li>
-                                <li>Website usage analytics</li>
-                            </ul>
-                        </li>
-                    </ol>
-                    </p>
-                </section>
-
-                <section>
-                    <h3>3. Purpose of Processing</h3>
-                    <p>Your information is used to:
-                    <ul style="margin-left: 20px;">
-                        <li>Respond to inquiries</li>
-                        <li>Conduct preliminary consultations</li>
-                        <li>Provide professional services</li>
-                        <li>Maintain internal compliance records</li>
-                        <li>Improve website performance</li>
-                    </ul>
-                    </p>
-                </section>
-
-                <section>
-                    <h3>4. Data Retention</h3>
-                    <p>We retain personal data:
-                    <ul style="margin-left: 20px;">
-                        <li>Only for as long as necessary</li>
-                        <li>For regulatory or contractual compliance</li>
-                        <li>For dispute resolution where applicable</li>
-                    </ul>
-                    Data no longer required is securely deleted or anonymized.
-                    </p>
-                </section>
+            <div class="cppv-container">
+                <h2>Premium Trust Statement</h2>
+                <p><strong>VisionaryPulse LLP </strong>operates as a strategic advisory partner to corporations,
+                    institutions, and global stakeholders navigating India’s complex regulatory and governmental
+                    landscape. <br>
+                    We function beyond conventional consulting — delivering structured influence management, regulatory
+                    intelligence, and institutional alignment through ethical and compliant frameworks.
+                </p>
             </div>
 
-            <div class="policy-col">
-                <section>
-                    <h3>5. Data Security</h3>
-                    <p>We implement:
-                    <ul style="margin-left: 20px;">
-                        <li>Administrative safeguards</li>
-                        <li>Access control protocols</li>
-                        <li>Secure communication channels</li>
-                        <li>Restricted data access</li>
-                    </ul>
-                    However, no system guarantees absolute security.
-                    </p>
-                </section>
-                <section>
-                    <h3>6. Data Sharing</h3>
-                    <p>We do not sell or trade personal data.<br>Data may be shared with:
-                    <ul style="margin-left: 20px;">
-                        <li>Authorized service providers</li>
-                        <li>Legal or regulatory authorities (when legally required)</li>
-                        <li>Professional partners under confidentiality obligations</li>
-                    </ul>
-                    </p>
-                </section>
-                <section>
-                    <h3>7. Your Rights</h3>
-                    <p>Subject to applicable law, you may request:
-                    <ul style="margin-left: 20px;">
-                        <li>Access to your data</li>
-                        <li>Correction of inaccuracies</li>
-                        <li>Withdrawal of consent</li>
-                        <li>Erasure of data (where legally permissible)</li>
-                    </ul>
-                    Requests may be sent to: <strong>info@visionaryllp.com</strong>
-                    </p>
-                </section>
 
-                <section>
-                    <h3>8. Cookies</h3>
-                    <p>We may use cookies and analytics tools. Users may disable cookies via browser settings.
-                    </p>
-                </section>
+            <section class="what-we-do slide-up" style="background: #f2f2f2; padding-bottom: 0;">
+                <div class="positioning-header">
+                    <h2 style="font-size: 34px;">Our Distinguishing Pillars</h2>
+                </div>
 
-                <section>
-                    <h3>9. Cross-Border Data Transfer</h3>
-                    <p>If applicable, data transfers outside India shall comply with relevant legal safeguards.</p>
-                </section>
+                <div class="bridge-grid" style="grid-template-columns: 1fr 1fr;">
+                    <div class="bridge-card">
+                        <div class="bridge-connector"></div>
+                        <h4>Strategic Depth</h4>
+                        <p>Advanced stakeholder mapping and regulatory foresight.</p>
+                    </div>
+                    <div class="bridge-card">
+                        <div class="bridge-connector"></div>
+                        <h4>Institutional Credibility</h4>
+                        <p>Structured engagement models aligned with governance standards.</p>
+                    </div>
+                    <div class="bridge-card">
+                        <div class="bridge-connector"></div>
+                        <h4>Confidential Advisory Protocols</h4>
+                        <p>Discretion-driven operations with layered confidentiality safeguards.</p>
+                    </div>
+                    <div class="bridge-card">
+                        <div class="bridge-connector"></div>
+                        <h4>Outcome-Driven Execution</h4>
+                        <p>Measured impact, not advisory abstraction.</p>
+                    </div>
+                </div>
 
-                <section>
-                    <h3>10. Policy Updates</h3>
-                    <p>We reserve the right to update this Privacy Policy periodically.</p>
-                </section>
 
-            </div>
+            </section>
+
+            <section style="margin-top: 40px;">
+                <h2>For High-Value Clientele</h2>
+                <p>We work with:
+                <ul style="margin-left: 20px;">
+                    <li>Multinational Corporations</li>
+                    <li>Sovereign and Institutional Investors</li>
+                    <li>Infrastructure & Policy Stakeholders</li>
+                    <li>Growth-Stage Enterprises</li>
+                    <li>High-Impact Political & Regulatory Entities</li>
+                </ul>
+                Engagements are conducted through structured onboarding, compliance vetting, and executive-level consultation.
+                </p>
+            </section>
+            
+            <section style="margin-top: 40px;">
+                <h2>Confidentiality & Governance Framework</h2>
+                <p>
+                <ul style="margin-left: 20px;">
+                    <li>Structured NDA protocols</li>
+                    <li>Regulatory-aligned representation</li>
+                    <li>Transparent reporting architecture</li>
+                    <li>Ethical advisory charter</li>
+                    <li>Zero-tolerance anti-corruption alignment</li>
+                </ul>
+                </p>
+            </section>
+
+            <section style="margin-top: 40px;">
+                <h2>Executive Advisory Model</h2>
+                <p>Every mandate is handled under:
+                <ul style="margin-left: 20px;">
+                    <li>Principal-led oversight</li>
+                    <li>Defined escalation mechanisms</li>
+                    <li>Institutional coordination planning</li>
+                    <li>Risk mitigation mapping</li>
+                </ul>
+                </p>
+            </section>
+            
+            <section style="margin-top: 40px;">
+                <h2>Corporate Assurance Statement</h2>
+                <p>VisionaryPulse LLP adheres to:
+                <ul style="margin-left: 20px;">
+                    <li>Indian statutory compliance frameworks</li>
+                    <li>Ethical representation standards</li>
+                    <li>Data protection principles</li>
+                    <li>Transparent advisory governance</li>
+                </ul>
+                We prioritize integrity, discretion, and measurable institutional outcomes.
+                </p>
+            </section>
+
+
+
         </div>
     </main>
 
