--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@
                     <span class="sub-heading">About Us</span>
                     <h2>VisionaryPulse LLP</h2>
                     <p class="main-desc">
-                        VisionaryPulse LLP is a multidisciplinary business and legal consulting firm empowering
-                        corporates, startups, political organizations, institutions, and international entities to
-                        navigate India’s complex government, regulatory, financial, and judicial ecosystems.
+                        <strong>VisionaryPulse LLP</strong> is a strategic business and regulatory consulting firm
+                        specializing in institutional advisory, government liaisoning, compliance strategy, and
+                        corporate-legal navigation across India. <br>
+                        We operate at the intersection of <strong>business, governance, and regulation,</strong> helping
+                        organizations manage complexity, accelerate approvals, and execute with precision.
                     </p>
 
                     <h3>We provide structured, ethical, and strategic advisory across:</h3>
@@ -161,8 +163,7 @@
                     </div>
                     <span class="card-label">OUR VISION</span>
                     <h3>Strategic Leadership</h3>
-                    <p>To become India’s most trusted consulting and advisory partner for organizations navigating
-                        government, legal, financial, and institutional ecosystems.</p>
+                    <p>To be India’s most trusted partner in business-government-legal strategy and execution.</p>
                 </div>
 
                 <div class="vm-card mission-card">
@@ -175,8 +176,8 @@
                     </div>
                     <span class="card-label">OUR MISSION</span>
                     <h3>Ethical Execution</h3>
-                    <p>To simplify complex regulatory, legal, political, and institutional processes through ethical,
-                        transparent, and result-driven consulting.</p>
+                    <p>To simplify complex institutional processes through structured advisory, ethical representation,
+                        and measurable outcomes.</p>
                 </div>
             </div>
         </section>
@@ -540,6 +541,11 @@
 
 
     <div class="section-container slide-up">
+        <!-- <div class="serve-header">
+                <span class="sub-heading">Target Industries</span>
+                <h2>Who We Serve</h2>
+                <p>Providing bespoke strategic and legal advisory across diverse organizational landscapes.</p>
+            </div> -->
         <section class="trust-compliance" id="compliance">
             <div class="compliance-container">
                 <div class="compliance-sidebar">
@@ -778,91 +784,63 @@
                 <div class="testimonial-track" id="testimonialTrack">
                     <div class="testimonial-card">
                         <div class="stars">★★★★★</div>
-                        <p class="testimonial-text">"VisionaryPulse helped us bring clarity to our business strategy
-                            during
-                            a critical growth phase. Their institutional liaisoning was flawless."</p>
+                        <p class="testimonial-text">"VisionaryPulse LLP played a pivotal role in navigating regulatory
+                            approvals during our expansion phase. Their structured approach and proactive coordination
+                            saved us significant time and operational risk.”"</p>
                         <div class="user-info">
                             <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop"
-                                alt="James Carter">
+                                alt="Rahul Mehta">
                             <div>
-                                <h4>JAMES CARTER</h4>
-                                <span>CEO, Finova Group</span>
+                                <h4>Rahul Mehta</h4>
+                                <span>Managing Director, Infrastructure Sector</span>
                             </div>
                         </div>
                     </div>
 
                     <div class="testimonial-card">
                         <div class="stars">★★★★★</div>
-                        <p class="testimonial-text">"The strategic bridge they built between our startup and the
-                            regulatory
-                            ecosystem was essential for our successful India entry."</p>
+                        <p class="testimonial-text">"Their team understands how to align business strategy with
+                            government frameworks. The clarity and precision they brought to our compliance roadmap were
+                            exceptional."</p>
                         <div class="user-info">
                             <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=100&h=100&fit=crop"
-                                alt="Sarah Jenkins">
+                                alt="Ananya Sharma">
                             <div>
-                                <h4>SARAH JENKINS</h4>
-                                <span>Founder, TechLaunch</span>
+                                <h4>Ananya Sharma</h4>
+                                <span>Founder, FinTech Startup</span>
                             </div>
                         </div>
                     </div>
 
                     <div class="testimonial-card">
                         <div class="stars">★★★★★</div>
-                        <p class="testimonial-text">"Excellence in crisis management. They handled our complex legal
-                            coordination with absolute discretion and efficiency."</p>
+                        <p class="testimonial-text">"We engaged VisionaryPulse for high-level institutional
+                            coordination. Their professionalism, discretion, and strategic insight exceeded
+                            expectations."</p>
                         <div class="user-info">
                             <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=100&h=100&fit=crop"
-                                alt="Robert Chen">
+                                alt="Vikram Sethi">
                             <div>
-                                <h4>ROBERT CHEN</h4>
-                                <span>Director, Global Infra</span>
+                                <h4>Vikram Sethi</h4>
+                                <span>Corporate Affairs Head</span>
                             </div>
                         </div>
                     </div>
 
                     <div class="testimonial-card">
                         <div class="stars">★★★★★</div>
-                        <p class="testimonial-text">"Their policy advisory is second to none. We were able to align our
-                            corporate framework with the latest regulatory shifts seamlessly."</p>
+                        <p class="testimonial-text">"From consultation to execution, the process was transparent and
+                            structured. They truly act as strategic partners rather than just advisors."</p>
                         <div class="user-info">
                             <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=100&h=100&fit=crop"
-                                alt="Anita Desai">
+                                alt="Neeraj Kapoor">
                             <div>
-                                <h4>ANITA DESAI</h4>
-                                <span>VP, Strategic Growth</span>
+                                <h4>Neeraj Kapoor</h4>
+                                <span>CEO, Growth Enterprise</span>
                             </div>
                         </div>
                     </div>
 
-                    <div class="testimonial-card">
-                        <div class="stars">★★★★★</div>
-                        <p class="testimonial-text">"A result-oriented consulting firm that actually walks with you.
-                            Their
-                            team managed our tender strategy with precision."</p>
-                        <div class="user-info">
-                            <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=100&h=100&fit=crop"
-                                alt="Marcus Thorne">
-                            <div>
-                                <h4>MARCUS THORNE</h4>
-                                <span>COO, BuildCorp</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="testimonial-card">
-                        <div class="stars">★★★★★</div>
-                        <p class="testimonial-text">"The level of confidentiality and ethical commitment they maintain
-                            is
-                            refreshing in the government advisory space."</p>
-                        <div class="user-info">
-                            <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?w=100&h=100&fit=crop"
-                                alt="Elena Moretti">
-                            <div>
-                                <h4>ELENA MORETTI</h4>
-                                <span>Legal Counsel, Euronext</span>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -902,58 +880,66 @@
                 </div>
 
                 <div class="faq-content-side">
-                    <h2>Frequently Asked <br>Questions</h2>
+                    <h2>Frequently Asked Questions</h2>
 
                     <div class="accordion">
                         <div class="accordion-item active">
                             <div class="accordion-header">
-                                <span>WHAT SERVICES DOES VISIONARYPULSE PROVIDE?</span>
+                                <span>What services does VisionaryPulse LLP provide?</span>
                                 <span class="icon">−</span>
                             </div>
                             <div class="accordion-content">
-                                <p>We offer comprehensive business and legal solutions including government liaisoning,
-                                    regulatory approvals, strategic execution, and institutional coordination across
-                                    India's
-                                    complex ecosystems.</p>
+                                <p>We offer regulatory advisory, government liaisoning, compliance structuring,
+                                    institutional coordination, crisis navigation, and strategic consulting for
+                                    businesses operating within India’s regulatory ecosystem.</p>
                             </div>
                         </div>
 
                         <div class="accordion-item">
                             <div class="accordion-header">
-                                <span>WHO CAN BENEFIT FROM OUR STRATEGY?</span>
+                                <span>Do you provide customized solutions?</span>
                                 <span class="icon">+</span>
                             </div>
                             <div class="accordion-content">
-                                <p>Our services are tailored for Corporates, Startups, Foreign Investors, and
-                                    Institutions
-                                    looking to navigate regulatory frameworks or resolve complex institutional crises.
+                                <p>Yes. Every engagement is tailored after assessing business objectives, regulatory
+                                    exposure, and institutional landscape.
                                 </p>
                             </div>
                         </div>
 
                         <div class="accordion-item">
                             <div class="accordion-header">
-                                <span>HOW DOES STRATEGIZE — LIAISE WORK?</span>
+                                <span>Do you work with international clients?</span>
                                 <span class="icon">+</span>
                             </div>
                             <div class="accordion-content">
-                                <p>We begin by mapping stakeholders and policy landscapes, then move to direct
-                                    coordination
-                                    with statutory bodies to ensure compliant and result-driven execution.</p>
+                                <p>Yes. We assist foreign investors and global corporations entering or operating in
+                                    India by facilitating regulatory clarity and institutional alignment.</p>
                             </div>
                         </div>
 
                         <div class="accordion-item">
                             <div class="accordion-header">
-                                <span>DO YOU OFFER CUSTOMIZED SOLUTIONS?</span>
+                                <span>How do you ensure confidentiality?</span>
                                 <span class="icon">+</span>
                             </div>
                             <div class="accordion-content">
-                                <p>Yes. Every case is unique. We design sector-specific strategies that align with both
-                                    your
-                                    business objectives and the latest legal/regulatory requirements.</p>
+                                <p>We operate under strict non-disclosure protocols, ethical compliance standards, and
+                                    structured documentation procedures.</p>
                             </div>
                         </div>
+
+                        <div class="accordion-item">
+                            <div class="accordion-header">
+                                <span>How can we engage your services?</span>
+                                <span class="icon">+</span>
+                            </div>
+                            <div class="accordion-content">
+                                <p>You may contact us via email or phone to schedule a preliminary consultation. Formal
+                                    engagements are initiated post scope discussion and agreement execution.</p>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -1047,7 +1033,7 @@
                     <a href="#" class="footer-logo">
                         <img src="img/logo-white.webp" alt="footer Logo">
                     </a>
-                    <!-- <p>Business & Legal Consulting | Government Liaisoning | Strategic Execution</p> -->
+                    <p>Business & Legal Consulting | Government Liaisoning | Strategic Execution</p>
                     <div class="footer-com-detail">
                         <div>CIN No. : 3562357126</div>
                         <div>GST No. : 237468237646</div>
@@ -1057,22 +1043,15 @@
                     <div class="footer-col">
                         <h4>Quick Links</h4>
                         <ul>
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#about">About</a></li>
+                            <!-- <li><a href="#home">Home</a></li> -->
+                            <li><a href="#about">About Us</a></li>
                             <li><a href="#services">Services</a></li>
-                            <li><a href="#project">Project</a></li>
+                            <li><a href="#project">Projects</a></li>
                             <li><a href="#blogs">Blogs</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h4>Other Links</h4>
-                        <ul>
+                            <!-- <li><a href="#contact">Contact</a></li> -->
                             <li><a href="privacy.html">Privacy Policy</a></li>
                             <li><a href="terms.html">Terms & Conditions</a></li>
-                            <li><a href="#">Other Links</a></li>
-                            <li><a href="#">Other Links</a></li>
-                            <li><a href="#">Other Links</a></li>
+                            <li><a href="cppv.html">CPPV</a></li>
                         </ul>
                     </div>
                     <div class="footer-col">
@@ -1080,7 +1059,7 @@
                         <ul>
                             <li>
                                 <a href="tel:+919871001011">
-                                    <i class="fa-solid fa-phone"></i>+91-98710-01011
+                                    <i class="fa-solid fa-phone"></i>+91-987-100-1011
                                 </a>
                             </li>
                             <li>
@@ -1089,10 +1068,10 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.google.com/maps/search/?api=1&query=123+Street,+234+Area,+New+Delhi,+India+334455"
-                                    target="_blank">
-                                    <i class="fa-solid fa-location-dot"></i>123 Street, 234 Area, New Delhi, India
-                                    (334455)
+                                <a href="https://maps.app.goo.gl/8YdALViTk3gEqUBw9" target="_blank">
+                                    <i class="fa-solid fa-location-dot"></i>Awfis Space Solutions Limited, Tower C, 19th
+                                    Floor, Bhutani Alphathum, Sector 90, Noida, Uttar Pradesh – 201304
+
                                 </a>
                             </li>
                         </ul>
