--- a/terms.html
+++ b/terms.html
@@ -43,72 +43,156 @@
         </div>
     </header>
 
-
-
     <header class="policy-header-bg">
         <div class="policy-header-card">
             <nav class="breadcrumb">
                 <a href="index.html">Home</a> <span>&gt;</span> <a href="#" class="active">Terms & Conditions</a>
             </nav>
             <h1>Terms & Conditions</h1>
-            <p>Please read these terms carefully before using our services. By engaging with VisionaryPulse LLP, you
-                agree to be bound by the professional standards outlined below.</p>
+            <p><strong>Effective Date:</strong> February 2026 | <strong>Entity:</strong> VisionaryPulse LLP</p>
+            <p><strong>(Structured for Professional Consulting Firm – India Jurisdiction)</strong></p>
+            <p>Please read these terms carefully. By engaging with VisionaryPulse LLP, you agree to be bound by the
+                professional standards and legal jurisdictions outlined below.</p>
         </div>
     </header>
 
     <main class="policy-container">
         <div class="policy-grid">
-
             <div class="policy-col">
                 <section>
-                    <h3>1. Acceptance of Terms</h3>
-                    <p>By accessing this website or engaging our advisory services, you confirm your acceptance of these
-                        Terms and Conditions and agree to comply with all applicable Indian laws and regulations.</p>
+                    <h3>1. Legal Acceptance</h3>
+                    <p>By accessing or using this website, you acknowledge that you have read, understood, and agree to
+                        be legally bound by these Terms & Conditions (“Terms”). If you do not agree, you must
+                        discontinue use immediately. <br>These Terms constitute a legally binding agreement between you
+                        (“User”) and VisionaryPulse LLP (“Firm”, “We”, “Us”, “Our”).</p>
                 </section>
 
                 <section>
-                    <h3>2. Scope of Services</h3>
-                    <p>VisionaryPulse LLP provides strategic execution, legal coordination, and government advisory. Our
-                        role is strictly advisory; final business decisions remain the responsibility of the client.</p>
+                    <h3>2. Nature of Website Content</h3>
+                    <p>All information provided on this website:
+                    <ul style="margin-left: 20px;">
+                        <li>Is for general informational purposes only</li>
+                        <li>Does not constitute legal advice, regulatory advice, or professional opinion</li>
+                        <li>Does not create a client-consultant relationship</li>
+                    </ul>
+                    A formal advisory relationship is established only upon execution of a written engagement agreement.
+                    </p>
                 </section>
 
                 <section>
-                    <h3>3. Intellectual Property</h3>
-                    <p>All content, strategies, and methodologies presented on this site are the exclusive property of
-                        VisionaryPulse LLP. Unauthorized reproduction or distribution is strictly prohibited.</p>
-                </section>
-            </div>
-
-            <div class="policy-col">
-                <section>
-                    <h3>4. Professional Conduct</h3>
-                    <p>We operate with a zero-tolerance policy regarding illegal gratification or unethical influence.
-                        All engagements must align with the Prevention of Corruption Act.</p>
-                </section>
-
-                <section>
-                    <h3>5. Limitation of Liability</h3>
-                    <p>VisionaryPulse LLP shall not be liable for any indirect, incidental, or consequential damages
-                        resulting from the use of our strategic roadmaps or institutional advice.</p>
+                    <h3>3. Professional Engagement</h3>
+                    <p>Services are subject to:
+                    <ul style="margin-left: 20px;">
+                        <li>Conflict checks</li>
+                        <li>Due diligence and onboarding</li>
+                        <li>Scope definition</li>
+                        <li>Written engagement letter</li>
+                        <li>Fee agreement</li>
+                    </ul>
+                    The Firm reserves the right to decline engagements at its discretion.
+                    </p>
                 </section>
 
                 <section>
-                    <h3>6. Governing Law</h3>
-                    <p>These terms are governed by and construed in accordance with the laws of India. Any disputes
-                        shall be subject to the exclusive jurisdiction of the courts in New Delhi.</p>
+                    <h3>4. Intellectual Property Rights</h3>
+                    <p>All materials on this website, including:
+                    <ul style="margin-left: 20px;">
+                        <li>Text</li>
+                        <li>Logos</li>
+                        <li>Branding</li>
+                        <li>Layout</li>
+                        <li>Strategy frameworks</li>
+                        <li>Proprietary methodologies</li>
+                    </ul>
+                    are the exclusive intellectual property of VisionaryPulse LLP and are protected under applicable
+                    copyright, trademark, and intellectual property laws of India. <br>
+                    Unauthorized reproduction, distribution, or modification is strictly prohibited.
+                    </p>
                 </section>
 
                 <section>
-                    <h3>7. Contact Information</h3>
-                    <p>Questions regarding these Terms should be directed to our legal team at: <br>
-                        <strong>Email:</strong> info@visionaryllp.com
+                    <h3>5. Confidentiality & Non-Reliance</h3>
+                    <p>Submission of information via:
+                    <ul style="margin-left: 20px;">
+                        <li>Contact forms</li>
+                        <li>Email</li>
+                        <li>Phone</li>
+                    </ul>
+                    does not automatically create confidentiality obligations unless agreed in writing. <br>
+                    Users should not submit sensitive or confidential information without a formal engagement agreement.
+                    </p>
+                </section>
+
+                <section>
+                    <h3>6. Limitation of Liability</h3>
+                    <p>To the fullest extent permitted under law. VisionaryPulse LLP shall not be liable for:
+                    <ul style="margin-left: 20px;">
+                        <li>Indirect or consequential losses</li>
+                        <li>Business interruption</li>
+                        <li>Loss of profits</li>
+                        <li>Regulatory penalties arising from third-party reliance on website content</li>
+                    </ul>
+                    Maximum aggregate liability shall not exceed fees paid under a valid engagement agreement.
                     </p>
                 </section>
             </div>
 
+            <div class="policy-col">
+                <section>
+                    <h3>7. Third-Party Links</h3>
+                    <p>This website may contain links to third-party resources. The Firm does not control or endorse
+                        such content and assumes no liability for external websites.</p>
+                </section>
+
+                <section>
+                    <h3>8. Compliance with Applicable Laws</h3>
+                    <p>Users agree not to:
+                    <ul style="margin-left: 20px;">
+                        <li>Use this website for unlawful purposes</li>
+                        <li>Attempt unauthorized access</li>
+                        <li>Interfere with website security</li>
+                    </ul>
+                    Any misuse may result in legal action.
+                    </p>
+                </section>
+
+                <section>
+                    <h3>9. Indemnification</h3>
+                    <p>Users agree to indemnify and hold harmless VisionaryPulse LLP from claims, damages, liabilities,
+                        and legal expenses arising from misuse of the website.</p>
+                </section>
+
+                <section>
+                    <h3>10. Force Majeure</h3>
+                    <p>The Firm shall not be liable for delays or failures due to events beyond reasonable control,
+                        including regulatory changes, government restrictions, natural disasters, or systemic
+                        disruptions.</p>
+                </section>
+
+                <section>
+                    <h3>11. Governing Law & Jurisdiction</h3>
+                    <p>These Terms are governed by the laws of India. Courts located in <strong>Uttar Pradesh,
+                            India</strong> shall have exclusive jurisdiction over disputes.</p>
+                </section>
+
+                <section>
+                    <h3>12. Amendments</h3>
+                    <p>We reserve the right to modify these Terms at any time. Continued use constitutes acceptance of
+                        updated Terms.</p>
+                </section>
+
+                <section>
+                    <h3>13. Registered Office</h3>
+                    <p>
+                        VisionaryPulse LLP<br>
+                        Awfis Space Solutions Limited, Tower C, 19th Floor<br>
+                        Bhutani Alphathum, Sector 90, Noida<br>
+                        Uttar Pradesh – 201304, India
+                    </p>
+                </section>
+            </div>
         </div>
     </main>
-
 
 
     <footer>
@@ -118,7 +202,7 @@
                     <a href="#" class="footer-logo">
                         <img src="img/logo-white.webp" alt="footer Logo">
                     </a>
-                    <!-- <p>Business & Legal Consulting | Government Liaisoning | Strategic Execution</p> -->
+                    <p>Business & Legal Consulting | Government Liaisoning | Strategic Execution</p>
                     <div class="footer-com-detail">
                         <div>CIN No. : 3562357126</div>
                         <div>GST No. : 237468237646</div>
@@ -128,22 +212,15 @@
                     <div class="footer-col">
                         <h4>Quick Links</h4>
                         <ul>
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#about">About</a></li>
+                            <!-- <li><a href="#home">Home</a></li> -->
+                            <li><a href="#about">About Us</a></li>
                             <li><a href="#services">Services</a></li>
-                            <li><a href="#project">Project</a></li>
+                            <li><a href="#project">Projects</a></li>
                             <li><a href="#blogs">Blogs</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-col">
-                        <h4>Other Links</h4>
-                        <ul>
+                            <!-- <li><a href="#contact">Contact</a></li> -->
                             <li><a href="privacy.html">Privacy Policy</a></li>
                             <li><a href="terms.html">Terms & Conditions</a></li>
-                            <li><a href="#">Other Links</a></li>
-                            <li><a href="#">Other Links</a></li>
-                            <li><a href="#">Other Links</a></li>
+                            <li><a href="cppv.html">CPPV</a></li>
                         </ul>
                     </div>
                     <div class="footer-col">
@@ -151,7 +228,7 @@
                         <ul>
                             <li>
                                 <a href="tel:+919871001011">
-                                    <i class="fa-solid fa-phone"></i>+91-98710-01011
+                                    <i class="fa-solid fa-phone"></i>+91-987-100-1011
                                 </a>
                             </li>
                             <li>
@@ -160,10 +237,10 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.google.com/maps/search/?api=1&query=123+Street,+234+Area,+New+Delhi,+India+334455"
-                                    target="_blank">
-                                    <i class="fa-solid fa-location-dot"></i>123 Street, 234 Area, New Delhi, India
-                                    (334455)
+                                <a href="https://maps.app.goo.gl/8YdALViTk3gEqUBw9" target="_blank">
+                                    <i class="fa-solid fa-location-dot"></i>Awfis Space Solutions Limited, Tower C, 19th
+                                    Floor, Bhutani Alphathum, Sector 90, Noida, Uttar Pradesh – 201304
+
                                 </a>
                             </li>
                         </ul>
